[package]
name = "tsp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }
numpy = "0.16"
itertools = "0.10"
rayon = "1.5"
bitvec = "1"

